force-app/main/default/objects/Care_Plan__c/Care_Plan__c.object-meta.xml
<CustomObject>
    <label>Care Plan</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Care Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>