force-app/main/default/objects/Care_Plan__c/fields/Care_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_ID__c</fullName>
    <label>Care Plan ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>