force-app/main/default/objects/Care_Plan__c/fields/Continence_Personal_Strategies_ID__c.field-meta.xml
<CustomField>
    <fullName>Continence_Personal_Strategies_ID__c</fullName>
    <formula>TEXT(General_Care_Plan__r.Continence_Personal_Strategies_ID__c)</formula>
    <label>Continence Personal Strategies ID</label>
    <type>Text</type>
</CustomField>