force-app/main/default/objects/Care_Plan__c/fields/Foot_Care_2__c.field-meta.xml
<CustomField>
    <fullName>Foot_Care_2__c</fullName>
    <label>Foot Care 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>