force-app/main/default/objects/Care_Plan__c/fields/Foot_Care_2_ID__c.field-meta.xml
<CustomField>
    <fullName>Foot_Care_2_ID__c</fullName>
    <formula>TEXT(General_Care_Plan__r.Foot_Care_2_ID__c)</formula>
    <label>Foot Care 2 ID</label>
    <type>Text</type>
</CustomField>