force-app/main/default/objects/Care_Plan__c/fields/Form_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_ID__c</fullName>
    <formula>TEXT(Care_Plan_ID__c)</formula>
    <label>Form ID</label>
    <type>Text</type>
</CustomField>