force-app/main/default/objects/Care_Plan__c/fields/General_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>General_Care_Plan__c</fullName>
    <label>General Care Plan</label>
    <referenceTo>General_Care_Plan__c</referenceTo>
    <relationshipLabel>Care Plans</relationshipLabel>
    <relationshipName>Care_Plans</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>