force-app/main/default/objects/Care_Plan__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>HYPERLINK(&quot;https://hcac.healthmetrics.com.au/main.php?action=carePlan&amp;accessmodule=careplan&amp;asmtFormID=&quot;&amp; Form_ID__c &amp;&quot;&amp;customerCode=&quot;&amp; Resident__r.Resident_ID__c ,  General_Care_Plan__r.Name ,&quot;_blank&quot;)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>