force-app/main/default/objects/Care_Plan__c/fields/Nutritional_Risk_Strategies_ID__c.field-meta.xml
<CustomField>
    <fullName>Nutritional_Risk_Strategies_ID__c</fullName>
    <formula>TEXT(General_Care_Plan__r.Nutritional_Risk_Strategies_ID__c)</formula>
    <label>Nutritional Risk Strategies ID</label>
    <type>Text</type>
</CustomField>