force-app/main/default/objects/Care_Plan__c/fields/Personal_Goals_OHAT__c.field-meta.xml
<CustomField>
    <fullName>Personal_Goals_OHAT__c</fullName>
    <label>Personal Goals OHAT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField><?xml version="1.0" encoding="UTF-8"?>
<CustomField>
    <fullName>Personal_Goals_OHAT__c</fullName>
    <label>Personal Goals OHAT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>