force-app/main/default/objects/Care_Plan__c/fields/Personal_Strategies_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_Strategies_ID__c</fullName>
    <formula>TEXT(General_Care_Plan__r.Personal_Strategies_ID__c)</formula>
    <label>Personal Strategies ID</label>
    <type>Text</type>
</CustomField>