force-app/main/default/objects/Care_Plan__c/fields/Personal_Strategies_OHAT_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_Strategies_OHAT_ID__c</fullName>
    <formula>TEXT(General_Care_Plan__r.Personal_Strategies_OHAT_ID__c)</formula>
    <label>Personal Strategies OHAT ID</label>
    <type>Text</type>
</CustomField>
<?xml version="1.0" encoding="UTF-8"?>
<CustomField>
    <fullName>Personal_Strategies_OHAT_ID__c</fullName>
    <formula>TEXT(General_Care_Plan__r.Personal_Strategies_OHAT_ID__c)</formula>
    <label>Personal Strategies OHAT ID</label>
    <type>Text</type>
</CustomField>