force-app/main/default/objects/Care_Plan__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <label>Resident</label>
    <referenceTo>Resident__c</referenceTo>
    <relationshipLabel>Care Plans</relationshipLabel>
    <relationshipName>Care_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>