force-app/main/default/objects/Care_Plan__c/fields/Resident_ID__c.field-meta.xml
<CustomField>
    <fullName>Resident_ID__c</fullName>
    <formula>Resident__r.Resident_ID__c</formula>
    <label>Resident ID</label>
    <type>Text</type>
</CustomField>