force-app/main/default/objects/Care_Plan__c/fields/Toileting_Personal_Strategies_ID__c.field-meta.xml
<CustomField>
    <fullName>Toileting_Personal_Strategies_ID__c</fullName>
    <formula>TEXT(General_Care_Plan__r.Toileting_Personal_Strategies_ID__c)</formula>
    <label>Toileting Personal Strategies ID</label>
    <type>Text</type>
</CustomField>